# qcmdpc_gf4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
paper/: main.bib  main.tex  mmcs_article.cls
src/bike_benchmark/: main.cpp
src/gf4x/: basic.c  gf2x.c  gf2x_avx2.c  gf2x_portable.c  gf4x.c  mdpc.c  mdpc.h
src/gf4x_benchmark/: main.c
src/gfpx/: basic.cpp  basic.hpp  main.cpp  mdpc.hpp  packed_array.h  sparse_vector.hpp
src/tests/: fft.cpp  finite_field_arithmetic.cpp  polynomials.cpp  test_fill_with_random_values_uniformity.c  test_polynomial_inverse_frequency.c
